tests/negative/traits/method_not_in_empty_impl.orng
trait My_Trait {
    fn f() -> ()
}

impl My_Trait for Int {}

fn main() -> Int {
    4
}